objects/Associated_Account__c.object
<CustomObject>
    <description>Junction Object to Relate Project Opps to Many Accounts</description>
    <fields>
        <fullName>Associated_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associated Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Associated_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attitude_towards_Danfoss__c</fullName>
        <description>CE Stakeholder Mapping field</description>
        <inlineHelpText>What is the customers attitude towards Danfoss</inlineHelpText>
        <label>Attitude towards Danfoss</label>
        <picklist>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enthusiastic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hostile</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Attitude_towards_competition__c</fullName>
        <description>CE Stakeholder Mapping</description>
        <inlineHelpText>What is the customers attitude towards the competition</inlineHelpText>
        <label>Attitude towards competition</label>
        <picklist>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enthusiastic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hostile</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Back_to_Opportunity__c</fullName>
        <formula>HYPERLINK((&apos;/&apos; + Project_Opportunity__r.Id) , &apos;Back to Opportunity&apos;,&apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Back to Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConfigitQuoteLink__c</fullName>
        <formula>HYPERLINK(&apos;http://&apos;&amp;$Setup.ConfigitQuoteSettings__c.ServerHost__c&amp;&apos;/Configit/Quote/api/ext/Opportunity/create/&apos;&amp;$User.Id&amp;&apos;/&apos; &amp;  CASESAFEID(Associated_Account__c)&amp;&apos;/&apos; &amp; Id, &apos;Configit Quote&apos;, &apos;_parent&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Configit Quote</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Select an Account and press save to add contact person in the next page. Use field :Set Contacts</inlineHelpText>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Associated_Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Stakeholder Mapping</relationshipLabel>
        <relationshipName>Associated_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Influence_on_Purchasing_Decision__c</fullName>
        <description>CE Stakeholder Mapping field</description>
        <inlineHelpText>How large an influence does the stakeholder have on the purchasing decision</inlineHelpText>
        <label>Influence on Purchasing Decision</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Motivation_for_change__c</fullName>
        <inlineHelpText>Add the contacts motivation for changing supplier</inlineHelpText>
        <label>Motivation for change</label>
        <picklist>
            <picklistValues>
                <fullName>Save</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No motivation - Doing fine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No motivation - Blind</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Opportunity__c</fullName>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Stakeholder Mapping</relationshipLabel>
        <relationshipName>Associated_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quote_in_SAP_CRM__c</fullName>
        <formula>HYPERLINK(
  &quot;/apex/SapQuoteStakeholder?id=&quot;&amp;Id,
  &quot;Quote in SAP CRM&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote in SAP CRM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_in_the_buying_Center__c</fullName>
        <description>CE Stakeholder Mapping field</description>
        <inlineHelpText>What is the cutomer contacts role in the buying center</inlineHelpText>
        <label>Role in the buying Center</label>
        <picklist>
            <picklistValues>
                <fullName>Ultimate approver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Screener</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enemy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Setasmainaccount__c</fullName>
        <formula>IF( Project_Opportunity__r.AccountId != Associated_Account__r.Id , 

HYPERLINK(&quot;/apex/SetAsMainAccount?id=&quot; &amp; Id, &quot;Set as Main&quot;, &quot;_top&quot;)
,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Set As Main Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Mapping__c</fullName>
        <formula>HYPERLINK((&quot;/&quot; +  Id) , &quot;Show Mapping&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Show Mapping</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubAccount__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sub Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Sub_Account__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Associated_Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Sub_Account__c</referenceTo>
        <relationshipName>Associated_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type_of_Association__c</fullName>
        <description>&quot;Main Account&quot; and &quot;Previous Main Account&quot; - are values used by business logic and cannot be removed or changed</description>
        <label>Type of Association</label>
        <picklist>
            <picklistValues>
                <fullName>Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultancy company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracting Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor/Wholesaler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installer Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Main Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner/Investor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panel Building company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Possible Supplier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previous Main Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System integrator company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical inspection</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Urgency_of_need__c</fullName>
        <description>CE Stakeholder Mapping field</description>
        <inlineHelpText>How urgent is the need for our products</inlineHelpText>
        <label>Urgency of need</label>
        <picklist>
            <picklistValues>
                <fullName>Mandatory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Significant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>opportunity_phase_status_look_up__c</fullName>
        <formula>TEXT( Project_Opportunity__r.CE_Phase__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Phase</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>opportunity_stage_look_up_c__c</fullName>
        <formula>TEXT( Project_Opportunity__r.StageName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <label>Stakeholder Mapping</label>
    <nameField>
        <displayFormat>AA-{0000}</displayFormat>
        <label>.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stakeholder Mapping</pluralLabel>
    <recordTypes>
        <fullName>Account</fullName>
        <active>true</active>
        <label>Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contact</fullName>
        <active>false</active>
        <label>Contact</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>